--- a/pom.xml
+++ b/pom.xml
@@ -203,9 +203,20 @@
                     <url>http://localhost:8083/manager/text</url>
                     <server>Tomcat-7.0.82</server>
                     <path>/wx_admin</path>
-                    <port>8082</port>
+                    <port>8085</port>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+
             <!--添加mybatis-generator-maven-plugin 插件-->
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
