--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -7,6 +7,6 @@ jdbc.password=Chy825193@2017
 
 #mybatis generatorœ‡πÿ…Ë÷√
 jdbc.driverLocation=E:/JavaTools/repository/mysql/mysql-connector-java/5.1.37/mysql-connector-java-5.1.37.jar
-jdbc.pojoLocation=cn.xiaobaiqiuzhi.admin.entity
-jdbc.mapperLocation=cn.xiaobaiqiuzhi.admin.dao
-jdbc.dao=cn.xiaobaiqiuzhi.admin.dao
+jdbc.pojoLocation=com.cainiaoshixi.entity
+jdbc.mapperLocation=com.cainiaoshixi.dao
+jdbc.dao=com.cainiaoshixi.dao
