修改LoginInterceptor拦截器

--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,4 +1,5 @@
-redis.host=localhost
+#redis.host=localhost
+redis.host=106.15.201.147
 redis.port=6379
 redis.password=Redis@2018
 redis.maxIdle=100
