--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.cainiaoshixi</groupId>
-    <artifactId>wx_admin</artifactId>
+    <groupId>com.cainiaoshixi.web</groupId>
+    <artifactId>web-bankend</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>wx_admin Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <name>CNSX Backend</name>
+    <url>http://cainiaoshixi.com</url>
 
     <properties>
         <spring.version>5.0.5.RELEASE</spring.version>
@@ -222,7 +222,6 @@
 
     </dependencies>
     <build>
-        <finalName>wx_admin</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
