--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,8 +5,8 @@ jdbc.url=jdbc:mysql://106.14.223.170:3306/cainiao?characterEncoding=utf-8&?tinyI
 jdbc.username=root
 jdbc.password=Chy825193@2017
 
-#mybatis generatorœ‡πÿ…Ë÷√
+#mybatis generator
 jdbc.driverLocation=E:/JavaTools/repository/mysql/mysql-connector-java/5.1.37/mysql-connector-java-5.1.37.jar
 jdbc.pojoLocation=com.cainiaoshixi.entity
-jdbc.mapperLocation=com.cainiaoshixi.dao
+jdbc.mapperLocation=mapper
 jdbc.dao=com.cainiaoshixi.dao
