--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -6,7 +6,7 @@ jdbc.username=root
 jdbc.password=Chy825193@2017
 
 #mybatis generatorœ‡πÿ…Ë÷√
-jdbc.driverLocation=E:/JavaTools/repository/mysql/mysql-connector-java/5.1.37/mysql-connector-java-5.1.37.jar
-jdbc.pojoLocation=com.cainiaoshixi.entity
-jdbc.mapperLocation=com.cainiaoshixi.dao
-jdbc.dao=com.cainiaoshixi.dao
+jdbc.driverLocation=D:/JavaTools/repository/mysql/mysql-connector-java/5.1.37/mysql-connector-java-5.1.37.jar
+jdbc.pojoLocation=com.cainiaoshixi.generate.entity
+jdbc.mapperLocation=com.cainiaoshixi.generate.dao
+jdbc.dao=com.cainiaoshixi.generate.mapper
