--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,14 @@
             <version>2.8.0</version>
         </dependency>
 
+        <!--文件上传-->
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
