--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://106.14.223.170:3306/cainiao?characterEncoding=utf-8
-jdbc.url=jdbc:mysql://106.14.223.170:3306/cainiao?characterEncoding=utf-8&?tinyInt1isBit=false
+jdbc.url=jdbc:mysql://106.14.223.170:3306/cainiao?characterEncoding=utf-8&tinyInt1isBit=false
 #jdbc.url=jdbc:mysql://localhost:3306/cainiao?characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=Chy825193@2017
