--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <url>http://cainiaoshixi.com</url>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>5.0.5.RELEASE</spring.version>
     </properties>
 
@@ -234,6 +235,19 @@
             <version>1.6.1</version>
         </dependency>
 
+        <!--validator-->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.11.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>3.0.1-b09</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -277,10 +291,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>3.5</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <annotationProcessorsPaths>
+                        <path>
+                            <groupId>org.hibernate.validator</groupId>
+                            <artifactId>hibernate-validator-annotation-processor</artifactId>
+                            <version>6.0.11.Final</version>
+                        </path>
+                    </annotationProcessorsPaths>
                 </configuration>
             </plugin>
         </plugins>
